[package]
name = "rrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.0"
inner = "0.1.1"
itertools = "0.10.1"
lazy_static = "1.4.0"
more-asserts = "0.2.2"
clap = "3.0.1"
colored = "2.0.0"
unchecked_unwrap = "3.0.0"